src/templates/k8s-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: {deploymentId}
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
    certmanager.k8s.io/cluster-issuer: letsencrypt-staging
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
    - hosts:
        - {subDomain}.hostiflix.com
      secretName: crt-{deploymentId}
  rules:
    - host: {subDomain}.hostiflix.com
      http:
        paths:
          - path: /
            backend:
              serviceName: {deploymentId}
              servicePort: 80
